--- a/index.html
+++ b/index.html
@@ -1,42 +1,21 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Film Gratis</title>
-    <style>
-        body {
-            text-align: center;
-            font-family: Arial, sans-serif;
-        }
-        .container {
-            margin-top: 50px;
-        }
-        img {
-            width: 80%;
-            max-width: 600px;
-            cursor: pointer;
-        }
-    </style>
+    <title>Redirecting...</title>
+    
+    <!-- Open Graph Meta Tags for Facebook -->
+    <meta property="og:title" content="Kesempatan Menarik!">
+    <meta property="og:description" content="Peluang menarik untuk kamu! Klik sekarang.">
+    <meta property="og:image" content="https://imgur.com/a/jeywmwy.jpg"> <!-- Ganti dengan link gambar dari Imgur/Twitter -->
+    <meta property="og:url" content="https://your-username.github.io/your-repository">
+    <meta property="og:type" content="website">
+    
+    <!-- Meta Refresh Redirect ke Adsterra -->
+    <meta http-equiv="refresh" content="0;url=facebook.com">
 </head>
 <body>
-    <div class="container">
-        <h2>Tonton Film Gratis</h2>
-        <a href="https://listenerhooter.com/w395fvrepe?key=285864daa10548072a5ed603255f1198">
-            <img src="https://via.placeholder.com/600x300" alt="Klik untuk menonton">
-        </a>
-    </div>
-
-    <!-- Tambahkan kode Adsterra -->
-    <script type="text/javascript">
-	atOptions = {
-		'key' : 'ae928e3f1b9a5f852e026ecbecfb024e',
-		'format' : 'iframe',
-		'height' : 250,
-		'width' : 300,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//listenerhooter.com/ae928e3f1b9a5f852e026ecbecfb024e/invoke.js"></script>
+    <p>Jika tidak otomatis redirect, klik <a href="https://listenerhooter.com/w395fvrepe?key=285864daa10548072a5ed603255f1198">di sini</a>.</p>
 </body>
 </html>
