--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website">
     
     <!-- Meta Refresh Redirect ke Adsterra -->
-    <meta http-equiv="refresh" content="0;url=facebook.com">
+    <meta http-equiv="refresh" content="0;url=https://listenerhooter.com/w395fvrepe?key=285864daa10548072a5ed603255f1198">
 </head>
 <body>
     <p>Jika tidak otomatis redirect, klik <a href="https://listenerhooter.com/w395fvrepe?key=285864daa10548072a5ed603255f1198">di sini</a>.</p>
